fixed z-index of clickdown

--- a/frontStyles.css
+++ b/frontStyles.css
@@ -299,7 +299,7 @@ figure p {
   background-color: white;
   position: sticky; /*so it sticks to top of page even when scrolling down*/
   top: 0;
-  z-index: 1;
+  z-index: 9999;
 }
 /*styling for the clickdown menu*/
 .clickdown {
@@ -307,6 +307,7 @@ figure p {
 }
 .clickdown-content {
   display: none;
+  z-index: 999;
   position: absolute;
   min-width: 200px;
   overflow: auto;
@@ -340,7 +341,7 @@ figure p {
     display: none; /*not displated until hover over dropdown*/
     width: 80%;
     position: absolute;
-    z-index: 1;
+    z-index: 9999;
     margin-top: 30px;
   }
 
